--- a/Doc/css/main.css
+++ b/Doc/css/main.css
@@ -45,8 +45,8 @@ a {
 
 button {
     border-radius: 20px;
-    border: 1px solid #FF4B2B;
-    background-color: #FF4B2B;
+    border: 1px solid rgba(179, 0, 41, 1);
+    background-color: rgba(179, 0, 41, 1);
     color: #FFFFFF;
     font-size: 12px;
     font-weight: bold;
@@ -70,7 +70,7 @@ button.ghost {
 }
 
 form {
-    background-color: #777;
+    background-color: rgba(37, 38, 41, 1);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,7 +80,7 @@ form {
     text-align: center;
 }
 
-input {
+input, select {
     background-color: #eee;
     border: none;
     padding: 12px 15px;
@@ -162,9 +162,9 @@ input {
 }
 
 .overlay {
-    background: #FF416C;
-    background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-    background: linear-gradient(to right, #FF4B2B, #FF416C);
+    background: #000000;
+    background: -webkit-linear-gradient(to right, #000000, #000000);
+    background: linear-gradient(to right, #000000, #000000);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
@@ -177,15 +177,12 @@ input {
     transition: transform 0.6s ease-in-out;
 }
 
-.overlay-container img{
-    border-radius: 0;
-}
-
 .container.right-panel-active .overlay {
     transform: translateX(50%);
 }
 
 .overlay-panel {
+    background-image: url(../img/login.png);
     position: absolute;
     display: flex;
     align-items: center;
@@ -279,7 +276,7 @@ p {
 }
 
 a {
-    color: #aa0a5f;
+    color: #ffffff;
 }
 
 a,
@@ -295,13 +292,29 @@ h3,
 h4,
 h5,
 h6 {
-    color: #333;
+    color: #ffffff;
     margin: 0;
     font-weight: normal;
 }
 
+.elemen {
+    color: #FFF;
+    font-family: Quantico;
+    font-size: 32px;
+    font-style: italic;
+    font-weight: 700;
+    line-height: normal;
+}
+
 h1 {
-    font-size: 28px;
+    width: 181px;
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Orbitron;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
 }
 
 h2 {
