--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap");
 
 * {
-  /* outline: 1px solid green; */
   font-family: "Orbitron", sans-serif !important;
 }
 
@@ -4688,8 +4687,8 @@ hr {
 /* line 1, C:/Users/HP/Desktop/July-HTML/292 Health coach/assets/scss/_services_section.scss */
 .services-area {
   background: #000000;
-  padding-top: 70px;
-  padding-bottom: 70px;
+  /* padding-top: 70px;
+  padding-bottom: 70px; */
 }
 
 .single-services {
@@ -8451,6 +8450,14 @@ del {
   /* Label color */
 }
 
+.form-group input {
+  color: white;
+  background-color: #000;
+  width: 100%;
+  border: none;
+  padding: auto;
+}
+
 .result-wrapper {
   background-color: #424346;
   padding: 20px;
@@ -8575,8 +8582,13 @@ body {
   text-decoration: none;
   font-weight: 600;
 }
+
 .jarakk {
   margin: 30px;
+}
+
+.ukuran {
+  font-size: ;
 }
 
 .pading {
@@ -8584,6 +8596,7 @@ body {
   display: flex;
   justify-content: flex-end;
 }
+
 .mytic {
   float: right;
   align-items: right;
@@ -8602,10 +8615,194 @@ body {
 
 .item {
   display: inline-block;
-  margin: 0 50px; /* Adjust the space between icons and text */
+  margin: 0 50px;
+  /* Adjust the space between icons and text */
 }
 
 .item img {
-  max-width: 100px; /* Adjust the maximum width of the images */
+  max-width: 100px;
+  /* Adjust the maximum width of the images */
   height: auto;
+}
+
+.form-wrapper-input {
+  position: relative;
+  background-color: #424346;
+  /* width: 60%; */
+  margin-top: 3%;
+  margin-bottom: 3%;
+  padding: 5% 5% 5% 5%;
+  gap: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 30px;
+}
+
+.grup-kiri-kanan {
+  display: flex;
+  flex-direction: row;
+
+  gap: 4%;
+}
+
+.grup-kiri {
+  width: 45%;
+}
+
+.grup-kanan {
+  width: 45%;
+}
+
+.services-area .container {
+  display: flex;
+  justify-content: center;
+}
+
+.formulir {
+  margin-top: 4%;
+  display: flex;
+  flex-direction: column;
+  gap: 4%;
+}
+
+.tombol-submit {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 6%;
+}
+
+.btn-submit {
+  background-color: red;
+  color: white;
+  width: 30%;
+  margin-top: 5%;
+  margin-right: 0;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  border-radius: 10px;
+  border: none;
+}
+
+.form-control,
+.form-control:active,
+.form-control:focus {
+  background-color: black;
+  color: white;
+  border: none;
+}
+
+.inputIdPw {
+  background-color: black;
+  color: white;
+  border: none;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 5%;
+}
+
+.gambar {
+  margin-top: 4%;
+}
+
+.form-wrapper-input h3 {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+}
+
+.table-order {
+  color: white;
+  position: relative;
+  background-color: #424346;
+  /* width: 60%; */
+  margin: 5% 20% 5% 20%;
+  padding: 2% 5% 5% 5%;
+  gap: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 30px;
+  text-align: center;
+  font-size: small;
+}
+
+.table-order tr.heading th,
+.table-order tr td {
+  vertical-align: top;
+}
+
+.table-order td {
+  margin-top: 0;
+  padding-bottom: 3%;
+}
+
+.table-order .heading {
+  color: goldenrod;
+  font-size: large;
+  padding-bottom: 60%;
+}
+
+.table-order .heading th {
+  padding-bottom: 6%;
+}
+
+.accept {
+  background: #ff1313;
+  font-family: "Oswald", sans-serif;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 0px;
+  -moz-user-select: none;
+  letter-spacing: 1px;
+  margin-bottom: 0;
+  cursor: pointer;
+  transition: color 0.4s linear;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  margin: 0;
+}
+
+.table-account {
+  color: white;
+  position: relative;
+  background-color: #424346;
+
+  margin: 5% 20% 5% 20%;
+  padding: 2% 5% 5% 5%;
+  gap: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 30px;
+  text-align: left;
+  font-size: small;
+  font-weight: 600;
+}
+
+.table-account tr.heading th,
+.table-account tr td {
+  vertical-align: middle;
+  padding: 2% 0 2% 0;
+}
+
+.table-account .heading {
+  color: goldenrod;
+  font-size: medium;
+}
+
+.table-account tr th,
+.table-account tr td {
+  border: 1px solid #dddddd;
+  padding: 1% 2% 1% 2%;
+}
+
+.table-account th {
+  text-align: center;
+}
+
+.table-account td.centered {
+  text-align: center;
 }
